# hifisampler

./: .gitignore  Program.cs  README.md  README_zh_cn.md  config.default.yaml  config.py  config.toml  config.yaml  hifiserver.py  launch_server.py  nsf_hifigan.py  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: models.py  resampler.py  server.py
client/: Program.cs  hifisampler.csproj
hnsep/: convert_hnsep_to_onnx.py
util/: audio.py  cache_manager.py  growl.py  hnsep.py  load_config_from_yaml.py  model_loader.py  nsf_hifigan.py  parse_utau.py  wav2mel.py  whisperize_hifisampler.py
utils/: load_config_from_yaml.py  nsf_hifigan.py  utils.py
