[project]
name = "hifisampler"
version = "0.0.5"
description = "A new UTAU resampler based on pc-nsf-hifigan and straycatresampler for virtual singer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.17.0",
    "librosa>=0.10.2.post1",
    "numba>=0.61",
    "numpy>=2.1.3",
    "onnxruntime>=1.21.0",
    "praat-parselmouth>=0.4.5",
    "pyloudnorm>=0.1.1",
    "pyworld>=0.3.5",
    "pyyaml>=6.0.2",
    "resampy>=0.4.3",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
